Sun Nov 29 02:39:16 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.inl:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:

          Updated initialization order for join.

        * tests/DCPS/FooTest3/Writer.cpp:
        * tests/DCPS/FooTest3NoKey/Writer.cpp:
        * tests/DCPS/FooTest3_1/Writer.cpp:
        * tests/DCPS/FooTest3_2/Writer.cpp:
        * tests/DCPS/FooTest5/Writer.cpp:
        * tests/DCPS/MultiDPTest/Writer.cpp:
        * tests/DCPS/MultiTopicTest/Writer.cpp:

          Fixed errors on Mac OS X 10.6 (Snow Leopard) hosts.

Sat Nov 28 18:29:55 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendBuffer.h:
        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:

          Fixed VC9 errors introduced by merge.

Sat Nov 28 18:00:50 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:
        * dds/DCPS/transport/framework/TransportReceiveStrategy.cpp:
        * dds/DCPS/transport/multicast/BestEffortMulticast.cpp:

          Fixed GCC warnings introduced by merge.

Sat Nov 28 00:23:46 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * MPC/config/dcps_multicast.mpb:
        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:
        * dds/DCPS/WriteDataContainer.cpp:
        * dds/DCPS/transport/framework/BuildChainVisitor.cpp:
        * dds/DCPS/transport/framework/CopyChainVisitor.h:
        * dds/DCPS/transport/framework/CopyChainVisitor.inl:
        * dds/DCPS/transport/framework/CopyChainVisitor.cpp:
        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:
        * dds/DCPS/transport/framework/NetworkAddress.h: